Android Kotlin Bootcamp - Ordering screen designed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">DesignWorkOfAndroidBootcamp</string>
+    <string name="pizzaTitle">Beef Cheese</string>
+    <string name="cheeseText">Cheese</string>
+    <string name="sausageText">Sausage</string>
+    <string name="oliveText">Olive</string>
+    <string name="pepperText">Pepper</string>
+    <string name="deliveryTimeText">20 min</string>
+    <string name="deliveryTitleText">Delivery</string>
+    <string name="pizzaExplainText">Meat lover, get ready to meet your pizza!</string>
+    <string name="priceText">$5.49</string>
+    <string name="buttonText">ADD TO CART</string>
 </resources>
