Multi-screen support provided, application icon changed, night mode colors changed-Android Kotlin Bootcamp

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DesignWorkOfAndroidBootcamp</string>
+    <string name="app_name">Pizza</string>
     <string name="pizzaTitle">Etli Peynir</string>
     <string name="cheeseText">Peynir</string>
     <string name="sausageText">Sucuk</string>
